quorum/test/tests/TypeChecker/Pass/IntegerGetText.quorum
class Main
    action Main
        Integer t 
        t:SetValue(5)
        integer p = 5

        print t:GetText()
        print p:GetText()
    end
end