quorum/test/tests/TypeChecker/Fail/ImpAssignTextObjIntObjWrapped.quorum
class main
    action main
        Integer int
        int:setValue(5)
        Text t = int
    end
end